--- a/home/programs/nvim/.gitignore
+++ b/home/programs/nvim/.gitignore
@@ -1,11 +1,4 @@
-tt.*
-.tests
-doc/tags
-debug
-.repro
-foo.*
-*.log
-data
-lua/plugins/example.lua
-compile_commands.json
-.DS_Store
+result
+bundle
+.direnv
+.luarc.json
