command added for starting utilities at startup time

--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -197,3 +197,6 @@ bindl=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindl=, XF86AudioPlay, exec, playerctl play-pause # the stupid key is called play , but it toggles 
 bindl=, XF86AudioNext, exec, playerctl next 
 bindl=, XF86AudioPrev, exec, playerctl previous
+
+# Start utilities
+exec-once=bash ~/.config/hypr/start.sh
