enable sound control via media keys

--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -182,13 +182,13 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+# Move/resize windows
+bindm = $mainMod, mouse:272, movewindow # Left click
+bindm = $mainMod, mouse:273, resizewindow # Right click
 
 # Setup media keys
-bindle=, XF86AudioRaiseVolume, exec, vol --up
-bindle=, XF86AudioLowerVolume, exec, vol --down
+bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindle=, XF86MonBrightnessUp, exec, bri --up
 bindle=, XF86MonBrightnessDown, exec, bri --down
 bindle=, XF86Search, exec, launchpad
