added keyboard bind for resizing windows nicely

--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -185,6 +185,10 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows
 bindm = $mainMod, mouse:272, movewindow # Left click
 bindm = $mainMod, mouse:273, resizewindow # Right click
+binde = $mainMod SHIFT, right, resizeactive, 30 0
+binde = $mainMod SHIFT, left, resizeactive, -30 0
+binde = $mainMod SHIFT, up, resizeactive, 0 -30
+binde = $mainMod SHIFT, down, resizeactive, 0 30
 
 # Setup media keys
 bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
