adding shortcuts and defining default apps

--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -24,7 +24,11 @@ monitor=,preferred,auto,1.5
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = dolphin
+$fileManager = thunar
+$notes = obsidian
+$browser = firefox
+$textEditor = code
+$musicPlayer = spotify
 $menu = wofi --show drun
 
 # Some default env vars.
@@ -101,15 +105,15 @@ dwindle {
     preserve_split = yes # you probably want this
 }
 
-master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
-}
-
-gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
-}
+# mastem {
+#     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+#     new_is_master = true
+# }
+#
+# gesturem {
+#     # See https://wiki.hyprland.org/Configuring/Variables/ for more
+#     workspace_swipe = off
+# }
 
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -135,9 +139,14 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive, 
-bind = $mainMod, M, exit, 
+bind = $mainMod, T, exec, $terminal
+bind = $mainMod, M, exec, $musicPlayer
+bind = $mainMod, B, exec, $browser
+bind = $mainMod, N, exec, $notes
+bind = $mainMod, C, exec, $textEditor
+bind = $mainMod, F, exec, $fileManager
+bind = $mainMod, Q, killactive, 
+#bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, R, exec, $menu
