--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -13,7 +13,6 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,1.5
 
-
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
@@ -42,13 +41,8 @@ input {
     kb_model =
     kb_options =
     kb_rules =
-
+    natural_scroll = true
     follow_mouse = 1
-
-    touchpad {
-        natural_scroll = no
-    }
-
     sensitivity = 0 # -1.0 to 1.0, 0 means no modification.
 }
 
