--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -139,9 +139,9 @@ bind = $mainMod, B, exec, $browser
 bind = $mainMod, N, exec, $notes
 bind = $mainMod, C, exec, $textEditor
 bind = $mainMod, F, exec, $fileManager
+bind = $mainMod, K, exec, slack
 bind = $mainMod, Q, killactive, 
 #bind = $mainMod, M, exit, 
-bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
