--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -16,7 +16,7 @@ monitor=,preferred,auto,1.5
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-# exec-once = waybar & hyprpaper & firefox
+exec-once = waybar -c ~/.config/waybar/Waybar-3.0/config -s ~/.config/waybar/Waybar-3.0/style.css
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
