--- a/home/hypr/waybar/Waybar-3.0/config
+++ b/home/hypr/waybar/Waybar-3.0/config
@@ -32,10 +32,10 @@
     "clock",
   ], 
   "custom/playerctl": {
-      "format": "[<span foreground='#46c880'>  </span> <span>{}</span> ]",
+      "format": "<span foreground='#46c880'>  </span> <span>{}</span>",
       "return-type": "json",
-      "max-length": 55,
-      "exec": "playerctl -a metadata --format '{\"text\": \"{{artist}} - {{title}} - {{album}}\"}' -F | sed 's/&/&amp;/g'",
+      //"max-length": 55,
+      "exec": "playerctl -a metadata --format '{\"text\": \"{{markup_escape(artist)}} - {{markup_escape(title)}} - {{markup_escape(album)}}\"}' -F",
       "on-click": "playerctl play-pause",
       "on-click-middle": "playerctl previous",
       "on-click-right": "playerctl next",
