replaced filler by blank separator

--- a/home/hypr/waybar/Waybar-3.0/config
+++ b/home/hypr/waybar/Waybar-3.0/config
@@ -14,7 +14,7 @@
     "memory",
     "disk",
     "temperature",
-    "custom/filler",
+    "custom/separator",
     "custom/playerctl",
   ],
   "modules-center": ["hyprland/workspaces"],
