--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -31,8 +31,11 @@ $musicPlayer = spotify
 $menu = wofi --show drun
 
 # Some default env vars.
-env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
+
+# Set cursor size
+env = HYPRCURSOR_THEME,Catppuccin-Macchiato-Sapphire-Cursors
+env = HYPRCURSOR_SIZE,48 # 24, 32, 48 or 64
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
