improve disk usage display

--- a/home/hypr/waybar/Waybar-3.0/config
+++ b/home/hypr/waybar/Waybar-3.0/config
@@ -52,7 +52,7 @@
   },
      "disk": {
     "interval": 1,
-    "format": "<span color=\"#68b0d6\">󱘲</span> {}%",
+    "format": "<span color=\"#68b0d6\">󱘲</span> {percentage_free}%",
     "on-click": "filelight /",
     "on-click-right": "filelight /home/"
   },
