--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -42,8 +42,10 @@ input {
     kb_layout = us
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = compose:ralt
     kb_rules =
+    repeat_delay = 300 # ms
+    repeat_rate = 50 # per second
     natural_scroll = true
     follow_mouse = 1
     sensitivity = 0 # -1.0 to 1.0, 0 means no modification.
