--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -17,6 +17,8 @@ monitor=,preferred,auto,1.5
 
 # Execute your favorite apps at launch
 exec-once = waybar -c ~/.config/waybar/Waybar-3.0/config -s ~/.config/waybar/Waybar-3.0/style.css
+exec-once = mako
+exec-once = nm-applet
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -210,5 +212,3 @@ bindl=, XF86AudioPlay, exec, playerctl play-pause # the stupid key is called pla
 bindl=, XF86AudioNext, exec, playerctl next 
 bindl=, XF86AudioPrev, exec, playerctl previous
 
-# Start utilities
-exec-once=bash ~/.config/hypr/start.sh
