added rofi shortcuts

--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -20,7 +20,8 @@ $notes = obsidian
 $browser = firefox
 $textEditor = code
 $musicPlayer = spotify
-$menu = wofi --show drun
+$apps = rofi -show drun
+$windows = rofi -show window
 
 # Some default env vars.
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
@@ -140,7 +141,8 @@ bind = $mainMod, K, exec, slack
 bind = $mainMod, Q, killactive, 
 #bind = $mainMod, M, exit, 
 bind = $mainMod, V, togglefloating, 
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, A, exec, $apps
+bind = $mainMod, W, exec, $windows
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
