--- a/home/hypr/hyprland.conf
+++ b/home/hypr/hyprland.conf
@@ -35,8 +35,8 @@ input {
     kb_layout = us
     kb_variant =
     kb_model =
-    kb_options = compose:ralt
     kb_rules =
+    kb_options = grp:alt_space_toggle,compose:rctrl
     repeat_delay = 300 # ms
     repeat_rate = 50 # per second
     natural_scroll = true
