--- a/home/hypr/waybar/Waybar-3.0/config
+++ b/home/hypr/waybar/Waybar-3.0/config
@@ -130,9 +130,9 @@
   "pulseaudio": {
     "format": "{icon} <b>{volume}</b>",
     "format-bluetooth": " {volume}",
-    "format-bluetooth-muted": " ",
+    "format-bluetooth-muted": "󰝟 ",
     "tooltip": false,
-    "format-muted": "",
+    "format-muted": "󰝟",
     "format-icons": {
       "default": ["󰝟", "", "󰕾" , ""]
     },
